--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             >
               ✉ Get in Touch →
             </a>
-            <button class="btn btn-secondary">⬇ Download Resume</button>
+            <a href="assets/YashNandasana_Resume_BA.pdf"class="btn btn-secondary"download> ⬇ Download Resume</a>
           </div>
 
           <div class="social-links">
